--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,13 +10,14 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/logo"
-        android:label="@string/app_name"
-        >
+        android:icon="@drawable/launchericon"
+        android:label="@string/app_name" >
         <activity
             android:name="com.example.kisibox.MainActivity"
-            android:label="@string/app_name" 
-            android:theme="@style/CustomTheme"> 
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,12 +26,11 @@
         </activity>
         <activity
             android:name="com.example.kisibox.KisiMain"
-            android:label="@string/app_name" 
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/CustomTheme" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+            <intent-filter android:label="@string/app_name" >
             </intent-filter>
         </activity>
     </application>
