--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,16 +9,17 @@
         android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.INTERNET" />
-    
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo"
-        android:label="@string/app_name"
-        >
+        android:label="@string/app_name" >
         <activity
             android:name="com.example.kisibox.MainActivity"
-            android:label="@string/app_name" 
-            android:theme="@style/CustomTheme"> 
+            android:screenOrientation="portrait"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:label="@string/app_name"
+            android:theme="@style/CustomTheme" > 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,7 +28,9 @@
         </activity>
         <activity
             android:name="com.example.kisibox.KisiMain"
-            android:label="@string/app_name" 
+            android:screenOrientation="portrait"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:label="@string/app_name"
             android:theme="@style/CustomTheme" >
         </activity>
     </application>
