--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,11 +18,9 @@
             android:name="com.example.kisibox.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden"
-            >
+            android:configChanges="orientation|keyboardHidden" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -32,6 +30,8 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/CustomTheme" >
+            <intent-filter android:label="@string/app_name" >
+            </intent-filter>
         </activity>
     </application>
 
