--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:icon="@drawable/launchericon"
         android:label="@string/app_name" >
         <activity
-            android:name="de.kisi.android.MainActivity"
+            android:name="de.kisi.android.LoginActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden" >
