--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,6 +17,7 @@
         <activity
             android:name="de.kisi.android.LoginActivity"
             android:label="@string/app_name"
+            android:theme="@style/CustomTheme" 
             android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden" >
             <intent-filter>
