--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,6 +36,13 @@
             <intent-filter android:label="@string/app_name" >
             </intent-filter>
         </activity>
+        <activity
+            android:name="de.kisi.android.LogInfo"
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/CustomTheme" >
+        </activity>
     </application>
 
 </manifest>
